# backend-pedido

./: README.md  pyproject.toml
config/: settings.py  urls.py
controle_pedidos/: admin.py  apps.py  models.py  serializers.py  views.py
controle_pedidos/migrations/: 0001_initial.py  0002_pedido.py  0003_rename_id_cliente_pedido_id_cliente_itenpedido.py  0004_rename_itenpedido_itempedido.py
